--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 <br>
                 <li>The result is displayed in an alert box using <code>alert("Your Age is :", calculateAge);</code>.
                 </li>
-            </ul>
+            s</ul>
+            <button onclick="age()">Calculate Age</button>
         </div>
     </div>
     <script src="script.js"></script>
